# BakaGit

./: LICENSE  MENU_OPTIMIZATION_REPORT.md  README.md  TEST_REPORT.md  UPDATES.md  pyproject.toml  requirements.txt  requirements_minimal.txt  run.py  test_comprehensive.py  test_functionality.py
docs/: dark_theme.md  development.md  开发者文档.md  用户指南.md
src/bakagit/: __init__.py  main.py
src/bakagit/core/: __init__.py  config.py  git_manager.py  utils.py
src/bakagit/gui/: __init__.py  main_window.py
src/bakagit/gui/dialogs/: __init__.py  appearance_dialog.py  clone_dialog.py  git_config_dialog.py  init_repository_dialog.py  language_dialog.py  settings_dialog.py
src/bakagit/gui/widgets/: __init__.py
src/bakagit/models/: __init__.py  commit.py  repository.py
tests/: test_basic.py  test_final_verification.py  test_issues.py  test_menu_structure.py  test_simple_imports.py
